[package]
name = "chiselj"
version = "0.1.3"
edition = "2021"
authors = ["Jonny Coombes <jcoombes@jcs-software.co.uk>"]
rust-version = "1.56"
description = "JSON command line utility"
license = "MIT OR Apache-2.0"
keywords = ["json", "cli"]
categories = ["text-processing", "command-line-interface", "command-line-utilities"]
repository = "https://github.com/jonnycoombes/chiselj"

[dependencies]
clap = {version = "4.1.6", features = ["derive", "cargo"]}
chisel-json = {path="../chisel-json/" }
crossterm = {version = "0.26.1"}
atty = {version = "0.2.14"}

[features]
default = ["crossterm"]
crossterm = []
