[package]
name = "chiselj"
version = "0.1.5"
edition = "2021"
authors = ["Jonny Coombes <jcoombes@jcs-software.co.uk>"]
rust-version = "1.56"
description = "JSON command line utility"
license = "MIT OR Apache-2.0"
keywords = ["json", "cli"]
categories = ["text-processing", "command-line-interface", "command-line-utilities"]
repository = "https://github.com/jonnycoombes/chiselj"

[dependencies]
clap = {version = "4.4.6", features = ["derive", "cargo"]}
chisel-json = {version = "1.0.4" }
crossterm = {version = "0.27.0" }
atty = {version = "0.2.14"}

[features]
default = ["crossterm"]
crossterm = []
