[package]
name = "chisel-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serial_test = "1.0.0"
env_logger = "0.10.0"
log = "0.4.17"
fxhash = { workspace = true }
chisel-utils = { path = "../utils" }
lexical = { version = "6.1.1", default-features = true }
